--- a/style.css
+++ b/style.css
@@ -356,11 +356,16 @@
 }
 
 body {
-    background: url("https://source.unsplash.com/random") no-repeat center center;
-    background-size: cover;
-    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: "Open Sans", sans-serif;
     font-size: 16px;
+}
+
+h1 {
+    text-align: center;
 }
 
 input {
